# wg-kotlin

./: .gitignore  AGENTS.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kmp-vpn/: Cargo.toml  build.gradle.kts
kmp-vpn/src/androidMain/kotlin/com/rafambn/kmpvpn/platform/: ExpectPlatformService.android.kt  Platform.android.kt  PlatformServiceProvider.android.kt
kmp-vpn/src/commonMain/kotlin/com/rafambn/kmpvpn/: Engine.kt  ErrorCode.kt  JavaBindinds.kt  StartRequest.kt  TunnelExample.kt  Vpn.kt  VpnAdapter.kt  VpnAdapterConfiguration.kt  VpnConfiguration.kt  VpnPeer.kt
kmp-vpn/src/commonMain/kotlin/com/rafambn/kmpvpn/address/: VpnAddress.kt
kmp-vpn/src/commonMain/kotlin/com/rafambn/kmpvpn/dns/: DNSProvider.kt  ExpectDNS.kt  InterfaceNameResolver.kt
kmp-vpn/src/commonMain/kotlin/com/rafambn/kmpvpn/info/: VpnInterfaceInformation.kt
kmp-vpn/src/commonMain/kotlin/com/rafambn/kmpvpn/platform/: AbstractPlatformService.kt  BasePlatformService.kt  ExpectPlatformService.kt  Platform.kt  PlatformService.kt  PlatformServiceProvider.kt
kmp-vpn/src/commonMain/kotlin/com/rafambn/kmpvpn/util/: IpUtil.kt  Util.kt
kmp-vpn/src/commonMain/rust/: lib.rs
kmp-vpn/src/iosMain/kotlin/com/rafambn/kmpvpn/dns/: ExpectDNS.ios.kt
kmp-vpn/src/iosMain/kotlin/com/rafambn/kmpvpn/platform/: Platform.ios.kt  PlatformServiceProvider.ios.kt
kmp-vpn/src/jvmMain/kotlin/com/rafambn/kmpvpn/platform/: AbstractDesktopPlatformService.kt  AbstractUnixDesktopPlatformService.kt  (+9 more)
wg-kotlin-uniffi-tun-rs/: Cargo.toml
wg-kotlin-uniffi-tun-rs/src/commonMain/rust/: lib.rs
(+260 files in other folders)
