[package]
name = "kmp-vpn"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
base64 = "0.13"
boringtun = "=0.7.0"
hex = "0.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
thiserror = "2.0.17"
uniffi = { version = "0.29.4", features = ["bindgen"] }
