[package]
name = "wg-kotlin-uniffi-tun-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
thiserror = "2.0.17"
tun-rs = { version = "2.8", features = ["interruptible"] }
uniffi = { version = "0.29.4", features = ["bindgen"] }
